@@ -1,0 +1,70 @@
+<!--
+  ~ This file is part of Doodle Android.
+  ~
+  ~ Doodle Android is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ Doodle Android is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with Doodle Android. If not, see <http://www.gnu.org/licenses/>.
+  ~
+  ~ Copyright (c) 2019-2022 by Patrick Zedler
+  -->
+
+<vector
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:width="24dp"
+  android:height="24dp"
+  android:viewportWidth="24"
+  android:viewportHeight="24">
+  <path
+    android:pathData="M0,0h24v24h-24z"
+    android:strokeLineJoin="round"
+    android:strokeWidth="6.59"
+    android:fillColor="#f3e7c8"
+    android:strokeColor="#00000000"
+    android:strokeLineCap="round" />
+  <path
+    android:pathData="M24,14.53c-1.4,0.57 -2.92,1.13 -4.64,1.44 -3.99,0.74 -7.42,-0.13 -10.33,0.42a6.98,6.98 0,0 0,-4.7 3.17A7.1,7.1 0,0 0,2.93 24H24v-9.47z"
+    android:strokeLineJoin="round"
+    android:strokeWidth=".06"
+    android:fillColor="#d1ab7d"
+    android:strokeColor="#00000000"
+    android:strokeLineCap="round" />
+  <path
+    android:pathData="M0,0v8.29c6.83,2.93 16.49,4.78 24,4.48V0H0z"
+    android:strokeLineJoin="miter"
+    android:strokeWidth=".02"
+    android:fillColor="#ead373"
+    android:strokeColor="#00000000"
+    android:strokeLineCap="butt" />
+  <path
+    android:pathData="M6.47,14.36C3.7,13.9 -5.06,6 -5.01,2.75 -4.94,-1.1 3.81,-2.92 8.26,0.8c4.44,3.73 2.03,14.2 -1.8,13.55Z"
+    android:strokeLineJoin="miter"
+    android:strokeWidth=".02"
+    android:fillColor="#b07029"
+    android:strokeColor="#00000000"
+    android:strokeLineCap="butt" />
+  <path
+    android:pathData="M23.5342,26.8833c-2.2163,0.0677 -3.8277,-1.6833 -5.5533,-2.7999 -1.9033,-1.3196 -3.7516,-3.096 -4.1449,-5.4857a34.8849,34.8849 45,0 1,-0.9432 -6.5473c0.0719,-1.6326 0.571,-3.409 1.8779,-4.4706 1.1885,-0.6302 2.3601,0.368 3.2356,1.0828 3.4809,2.5166 5.7944,6.2639 7.5666,10.1043 0.8628,1.8356 1.7595,3.6924 2.2882,5.6506 -0.0508,1.3915 -1.5649,1.9329 -2.6815,2.3093 -0.5329,0.1438 -1.0912,0.1988 -1.6495,0.1565z"
+    android:strokeWidth="0.025377"
+    android:fillColor="#c89732" />
+  <path
+    android:pathData="M22.5784,26.7226c-0.7994,-0.1607 0.4652,-0.1353 0,0zM22.0116,26.5449c-0.8374,-0.5752 -1.7341,-0.7909 -2.5504,-1.4549a24.0236,24.0236 0,0 0,-2.377 -1.7341c-0.461,-0.1946 -1.5142,-1.4253 -0.3595,-0.9432 0.2242,-0.7698 1.0278,-0.2284 1.2308,-0.0761 0.2284,-0.4526 0.2538,0.3595 -0.0804,0.368 0.5329,0.0888 0.9178,-0.9559 1.0489,-0.8628 0.2453,0.3722 -0.0338,1.1208 0.4314,0.7613 0.0085,-0.1142 0.7021,1.0151 0.6344,0.1523 -0.0592,-0.6556 0.8544,0.0719 0.5668,-0.0338 0.2199,0.4568 0.5075,-0.7486 0.4314,0.1523 0.1438,0.368 0.4652,0.055 0.2199,-0.1269 0.5202,-0.0169 -0.2072,-1.3281 0.4822,-0.609 -0.0423,0.5033 0.3933,0.2622 0.2072,0.7529 0.5245,0.3384 0.3807,-0.4103 0.4991,-0.3426 0.3341,0.7402 0.8882,0.1692 0.6936,-0.4356 0.1269,0.7275 0.8459,0.5498 0.9812,0.2242 0.4949,-0.1565 1.0151,-0.2791 0.6598,-0.9559 0.1692,-0.4949 0.3172,1.0405 0.9812,0.5668 0.2495,-0.1353 0.3088,-0.3299 0.626,-0.1819 0.664,-0.3553 1.032,1.0743 1.2054,1.7933 0.3764,0.5837 0.4441,1.6368 -0.5625,1.2815 -1.0997,-0.0846 -1.2604,0.9009 -0.6556,1.2392 -0.5921,-0.5329 -1.2519,-1.18 -2.0259,-0.4526 -0.0973,-0.4018 -1.0193,0.2749 -0.8628,-0.3045 -0.5541,0.2369 -1.1039,0.1607 -1.235,0.7021 -0.2876,-0.0592 -0.0254,0.3214 -0.3045,0.0254 -0.7486,-0.2411 0.1946,0.3299 0.3426,0.5033l-0.2284,-0.0085zM18.6322,22.916c-0.2369,-0.3257 0.3764,-0.8459 -0.1776,-0.2834 -0.4864,0.3384 -0.11,0.1227 0.1523,0.3172l0.0254,-0.0338zM22.9463,26.0797c-0.0846,-0.8586 0.884,-0.0719 0,0zM19.8165,22.7045c-0.3807,-0.1861 0.4145,-0.3214 0,0zM22.8025,21.9348c-0.2749,-0.7698 0.5583,0.1819 0,0zM17.0293,21.8502c-0.1269,-0.9812 0.4652,-0.0846 0,0zM21.06,21.7698c-0.6006,-0.3045 0.0042,-0.351 0,0zM25.5263,21.6979c0.2411,-0.4356 0.5498,0.2791 0,0zM26.6006,21.6556c-0.6471,-0.1184 0.4822,-0.2115 0,0zM23.0182,20.9578c0.3384,-1.0151 -0.5921,-1.4634 -1.2266,-0.7825 -0.1142,0.093 -1.032,-0.2749 -1.087,0.5075 -0.3172,-0.8205 -1.4465,-0.1015 -2.1867,-0.406 -0.7698,-0.2665 -1.29,0.8163 -1.7003,0.1692a6.082,6.082 45,0 0,-2.2205 0.1861c0.0761,-0.1903 -0.8459,-1.3704 -0.2369,-0.9897 0.3764,0.6598 1.2435,-1.0066 1.2392,-1.0235 -0.0296,0.664 0.4314,0.3299 0.5837,0.4483 -0.0423,-0.2791 0.8459,-0.1819 0.6894,-0.0888 -0.2791,0.0592 -0.0761,0.4864 -0.5794,0.571 -0.1269,-0.1057 -0.9855,0.3257 -0.1946,0.3426 -0.4272,0.7063 1.696,0.5964 0.7402,-0.1861 0.4864,0.7275 0.2876,-1.9033 0.4906,-0.4652 0.0085,1.3873 1.4634,0.7486 2.3516,0.8967 0.6175,0.1438 1.2139,-0.7106 1.3408,-0.2326 0.6852,-0.1692 2.2289,-0.3976 2.9945,-1.1462 0.5752,-0.0677 0.9559,-0.884 0.148,-0.6979 0.6852,0.3807 -0.4483,0.2369 -0.2453,-0.3468 0.609,0.4652 0.2834,-0.664 0.7106,-0.6175 0.6344,0.8459 0.9432,1.7933 0.7317,2.8338 -0.3595,0.7021 0.0846,-1.3619 -0.4652,-0.8417 -0.571,-0.571 -1.3111,0.6006 -1.7426,0.6513 -0.055,0.3553 0.1523,0.9559 -0.1353,1.2181zM14.8638,20.298c0.3384,-0.3088 0,-0.3849 -0.1015,0.0085l0.1015,-0.0085zM15.2402,20.2091c0.719,-0.1861 -0.7909,-0.3088 0,0zM16.3398,20.133c-0.1269,-0.5371 0.5668,0.0761 0,0zM25.7167,19.7101c-0.3088,-0.3172 0.0888,-0.5245 0.0634,-0.148 0.165,0.0085 0.1269,0.2538 -0.0634,0.1523zM17.6848,19.6255c-0.0888,-0.6006 0.5583,0.0169 0,0zM18.2347,19.4351c-0.2199,-0.4906 0.2749,-0.0804 0,0zM18.8776,19.3717c-0.1903,-0.9136 0.4103,-0.1861 0,0zM21.8509,18.6865c-0.6683,-0.9178 0.4229,0.1269 0,0zM16.9066,18.3989c0.0085,-0.5794 0.3637,0.1861 0,0zM21.9101,18.3904c0.1142,-0.6979 0.4187,-0.3003 0,0zM15.3375,17.2908c0.2072,-0.6175 0.3172,-2.6223 -0.5879,-1.6707 -1.032,-0.3299 -0.7486,1.4592 -1.1208,1.4592 0.1396,-0.3045 0.3933,-1.6622 -0.1015,-0.9516 -0.2834,-0.2538 -0.3214,-1.18 0.0423,-0.6598 0,-0.3468 0.093,-0.1396 0.0973,-0.4652 0.3299,0.0169 0.8332,-0.1269 0.8036,0.1396 0.1142,-0.6683 0.0634,0.0254 0.6344,-0.1692 0.406,-0.0846 0.6936,-0.3933 0.4018,-0.6048 0.6471,-0.0211 1.3957,-0.626 0.4737,-0.8205 -0.2411,-0.5202 -0.1819,-0.7275 0.3003,-0.3088 0.6302,0.1776 -0.2961,-0.9728 -0.6048,-0.3384 -0.5033,0.1142 -0.9178,-0.3849 -1.0066,0.2876 -0.1269,0.1396 0.8882,0.0677 0.5075,0.3976 -0.1184,-0.2538 -1.1208,-0.0677 -0.6429,0.4314 -0.4441,0.0592 -0.2115,-0.9009 -0.5921,-0.1396 -0.2749,-0.3722 -0.5202,-0.1057 -0.4822,-0.4906 -0.1861,0.2707 0.0804,0.9136 -0.3807,0.4526 -0.2707,-1.1081 -0.093,-2.1232 0.0085,-3.2144 0.4103,-1.1504 0.7613,-2.58 1.9709,-3.1341 1.125,-0.3807 1.9836,0.6513 2.8591,1.1631 0.8374,0.5921 1.5903,1.3661 2.2501,2.0132 0.5414,0.3595 0.9009,1.2858 1.1293,1.5565 0.5498,0.0634 0.2284,0.4229 0.8121,0.5541 0.4229,0.8544 1.3746,1.6707 1.3746,2.5715 0.3933,0.0973 -0.0973,0.3088 0.4145,0.2749 -0.2115,0.2199 -0.0085,0.8036 0.1184,0.3764 0.3172,0.6429 -0.1607,0.2961 -0.3807,0.2115 -0.6133,0.3807 1.1166,0.7613 0.1353,0.6344 -0.3384,-0.6429 -1.7426,0.9389 -1.1166,0.1269 0.4906,-0.2326 0.9178,-1.3196 0.0423,-1.1335 -0.3637,0.1015 0.516,-0.2665 0.4229,-0.5075 0.7486,-0.1353 -0.5668,-1.2308 -0.0423,-0.3088 -0.1692,0.1142 -0.1438,-0.2495 -0.4822,-0.0973 -0.5583,-0.3468 0.2453,0.2326 -0.3807,0.1015 0.2284,0.3764 -0.8459,0.1692 -0.368,0.7359 -0.1269,0.5118 -0.4187,0.3299 -0.6006,0.5837 -0.1269,-0.1903 -0.4187,0.4103 -0.8205,0.3976 0.5752,0.2791 -0.3976,0.5456 0.0677,0.0973 -0.3214,0.1015 -1.0024,0.5498 -1.2223,0.3553 1.0024,-0.2622 1.2054,-1.142 1.9456,-1.5903 -0.4314,-0.2115 0.8628,-0.5075 0.1607,-0.6471 -0.0296,-0.626 0.1057,-0.2961 0.4737,-0.3045 -0.6556,-0.2495 0.1057,-0.4652 -0.5414,-0.4822 -0.3426,-0.5245 -0.1903,0.0508 -0.1988,0.2453 -0.1903,-0.1819 -0.3553,-0.5837 -0.6006,-0.1269 0.1861,-0.6767 -0.8459,-0.3088 -0.2961,-0.6556 -0.4356,-0.2115 -0.5794,0.7486 -0.6894,0.1227 -0.4018,0.2242 -0.5075,1.0109 -0.9136,1.3957 -0.0508,-0.3807 0.7613,-1.7214 -0.0846,-1.3577 0.626,0.5498 -0.4822,0.3637 -0.11,-0.093 -0.6133,-0.0423 -0.4314,1.5015 -0.6006,0.3214 -0.3933,-0.1142 -1.0574,0.148 -0.6683,0.8374 -0.0465,0.5245 -0.3341,1.899 -0.2495,0.6006 0.0634,-0.3722 0.0423,-1.3111 -0.3722,-0.8078 0.6217,0.9136 -0.6936,-0.4441 -0.1607,0.3468 0.3933,0.3637 -1.1081,0.2115 -0.4568,0.6048 -0.6175,0.1142 0.055,0.6429 -0.3214,1.1377 -0.0508,0.0719 -0.0169,0.8163 -0.2495,0.5498zM21.6352,15.9754c0.2538,-0.7106 -0.8417,0.2622 0,0zM14.1278,13.4081c0.2369,-0.516 -0.4737,-0.0042 0,0zM14.3224,13.3658c0.5414,-0.4652 0.148,-0.3003 -0.1396,-0.0254l0.0296,0.0423 0.11,-0.0211zM14.3435,12.9429c0.2284,-0.4314 0.7909,-1.2985 0.0465,-0.8248 -0.0973,0.093 0.3045,-0.461 -0.0846,-0.3807 0.0719,0.6598 -0.8036,-0.3891 -0.5837,0.313 -0.9178,-0.2284 -0.0042,1.0701 0.2834,0.5075 0.1692,0.0888 0.0888,0.8205 0.3384,0.3807zM14.1532,12.5199c0.1269,-0.4822 0.5837,0.1861 0,0zM15.5743,12.7525c-0.1734,-0.2791 0.5964,-0.5456 0.0423,-0.3257 0.1142,-0.4864 -1.29,0.2749 -0.4737,0.0973 0.148,-0.0211 0.2538,0.3384 0.4314,0.2284zM17.7314,12.6679c-0.5456,-0.2749 -0.313,0.2157 0,0zM13.8656,11.6486c-0.2369,-0.4229 -0.3722,0.2199 0,0zM18.5984,10.9634c0.1057,-0.2961 -0.4737,-1.3661 -0.3384,-0.5371 -0.3088,0.4145 0.0761,0.4737 0.3384,0.5371zM17.9217,10.3925c0.1227,-0.5752 -0.3384,0.2115 0,0zM17.2323,8.7472c0.2115,-0.5414 -0.4526,0.2707 0,0zM16.6275,8.1762c0.1142,-0.4314 -0.3384,-0.4822 0,0zM22.9167,17.2908c-0.1692,-0.4822 0.4483,0.1311 0,0zM22.0962,17.1427c-0.1015,-0.7232 0.5794,-0.1142 0,0zM21.576,16.9566c-0.2453,-0.4822 0.5371,0.0592 0,0zM16.9827,16.4914c-0.2157,-0.4483 0.3384,0.1269 0,0zM15.8112,16.3138c-0.0719,-0.4779 0.4737,0.1269 0,0zM22.2062,15.8316c0.2199,-0.2707 -0.0677,-0.2284 0.3257,-0.4229 0.1776,0.1776 -0.1353,0.4568 -0.3257,0.4229zM18.4038,15.5355c-0.0127,-0.6556 0.5245,-0.0296 0,0zM17.4015,15.379c-0.165,-0.5329 0.5075,0.2538 0,0zM22.4092,15.2987c0.4314,-0.4652 0.4991,0.1861 0,0zM17.7271,15.0026c-0.2284,-0.3807 0.5075,-0.0677 0,0zM14.1617,14.9096c-0.7782,-0.2369 0.5583,-0.2918 0.0338,0.0423l-0.0338,-0.0423z"
+    android:strokeWidth="0.025377"
+    android:fillColor="#ba852b" />
+  <path
+    android:pathData="M21.3941,25.9697c-0.4906,-0.2961 0.406,-0.2411 0,0zM20.7766,25.5721c-0.3172,0.0211 -1.5057,-0.351 -0.7148,-0.5964 0.2242,-0.3891 0.5879,-0.7613 0,-0.8967 -0.7867,0.0508 -1.4507,-0.3553 -2.2205,-0.4652 -0.5202,-0.0085 -1.2266,-0.461 -0.922,-0.8248 -0.4949,-0.4652 0.5964,-0.571 0.5371,0.0508 0.3341,0.4187 1.2858,0.5583 1.4972,-0.1142 0,0.719 1.2392,0.4568 1.383,0.4229 0.2961,0.626 0.6513,-0.1565 0.9474,0.3553 0.3976,0.3045 0.5456,-0.3976 0.4779,-0.2961 0.5541,0.6979 1.2985,-0.313 2.0344,-0.2072 0.5075,-0.1269 1.3661,-0.4145 1.3788,-0.9305 0.4864,0.8248 2.1063,-0.5794 2.157,0.7655 -0.1353,0.8332 -1.3873,0.3764 -1.5903,1.2139 -0.148,0.4737 -0.0592,1.2985 -0.8501,0.9601 -0.351,-0.1819 -0.922,-0.6344 -0.8121,-0.0381 -0.664,0.1861 -1.3957,-0.2538 -2.0217,0.0423 -0.2115,0.1692 -0.8121,0.6513 -0.4906,0.0592 -0.4526,-0.1142 -0.4695,0.4652 -0.7909,0.4991zM24.617,24.5105c0.1438,-0.4103 -0.2538,-0.0296 0,0zM24.9934,24.5105c0.5414,-0.5964 -0.7571,0.0423 0,0zM25.3656,23.7915c0.0127,-0.461 -0.3384,0.3045 0,0zM25.8266,23.5124c0.5625,-0.1523 -0.3045,-0.2834 0,0zM25.5898,25.4199c-0.3384,-0.4526 0.3976,0.3045 0,0zM19.8292,24.519c-0.3468,-0.3384 0.4652,-0.1353 0,0zM26.5964,24.3921c-0.4441,-0.6556 1.5734,-0.3807 0.4568,-0.0888 -0.1269,0.0719 -0.313,0.2199 -0.4526,0.0846zM26.055,24.1806c0.0254,-0.5245 0.6683,-0.2199 0,0zM21.614,22.6453c-0.3595,-0.1988 0.1353,-0.516 0,0zM17.0293,21.6472c-0.3384,-0.719 0.5752,0.2284 0,0zM14.6396,20.6871c0.203,-0.5583 0.7021,-0.0381 0,0zM16.9574,20.4544c0.3637,-0.313 1.4423,-0.3849 1.5142,-0.203 -0.5075,0.0381 -1.0278,0.0423 -1.5142,0.203zM15.8704,20.3445c-0.7613,0.2961 -0.1438,-1.5353 -0.3384,-0.6006 0.0042,0.2495 0.2115,0.4103 0.3384,0.6006zM19.3893,20.2472c0.2284,-0.3003 1.5861,-0.1057 0.7063,-0.0042 -0.2326,-0.0211 -0.4737,-0.0677 -0.7063,0zM20.895,20.188c0.9812,-0.5498 2.2205,-0.5075 3.0875,-1.2858 0.1903,-0.2072 1.2477,-0.7698 1.0151,-0.3384 -0.7529,0.2961 -1.6072,0.8417 -2.0725,1.29 -0.7021,-0.2242 -1.3408,0.3468 -2.0302,0.3384zM17.4607,20.0611c-0.5033,-0.0508 -0.0127,-0.9305 -0.0296,-0.2242 0.0127,0.0508 0.1311,0.1776 0.0296,0.2284zM20.3367,16.6775c0.055,-0.516 0.5879,-0.1057 0,0zM20.6624,16.3095c0.7909,-0.6556 1.2562,-1.5945 1.6749,-2.4531 -0.2411,-0.5371 -0.9009,0.2538 -1.235,-0.3637 -0.3976,0.3003 -1.0235,-0.6344 -1.1589,0.0381 -0.3637,-0.1438 -0.7655,0.2453 -0.4229,-0.3088 -0.1523,-0.4314 -0.8967,0.11 -1.125,-0.2834 -0.7359,0.3045 -1.1673,1.0785 -1.9287,1.3788 -0.6133,0.7613 -1.5099,1.0447 -2.3601,1.4084 -0.3214,0.3384 -1.0658,-0.093 -0.3172,-0.1607 0.9982,-0.1903 1.8187,-0.774 2.5588,-1.4423 0.3299,-0.4526 1.806,-1.0193 1.1081,-1.6072 -0.7021,-0.148 -1.4042,-0.2961 -2.0767,-0.5498 -0.7359,-0.2538 -1.4803,-0.5498 -2.267,-0.5414 -0.2115,-0.5414 0.1861,-1.7975 0.4906,-1.7172 0.2749,0 0.7063,-0.1184 0.7486,0.1184 0.7867,-0.5414 -0.9136,-1.493 0.1819,-1.9794 0.4229,0.0169 0.9516,0.6471 0.3553,0.9728 0.6217,0.1438 -0.2538,0.8459 0.0423,1.1124 -0.2453,0.7106 1.4084,0.3384 0.9982,-0.3933 0.0296,-0.5668 0.516,-0.0634 0.1523,0.2411 -0.368,0.4229 0.5202,0.7021 -0.0973,0.6175 -0.2072,0.6344 0.6556,0.867 0.7951,0.1734C17.5706,10.4601 17.8921,11.4625 18.4165,11.8855c0.2242,0.5033 1.3111,0.0761 0.9559,-0.1184 -0.2961,0.1438 -0.7613,-0.1523 -0.1903,-0.1438 0.7402,-0.3088 -0.4229,-1.2054 -0.6133,-1.6833 -0.1946,-0.3257 -0.8967,-1.1504 -0.6429,-1.2266 0.6556,0.4695 1.5057,1.0489 1.5226,1.9244 0.2538,0.8374 1.0574,1.3323 1.4719,2.009 0.1015,0.5752 1.0954,-0.0973 1.4592,0.609 0.6598,0.4991 0.6556,1.3111 -0.2242,1.5226 -0.5118,0.3637 -0.6809,1.0658 -1.2519,1.4042 -0.0761,0.0508 -0.1565,0.093 -0.2411,0.1269zM20.1929,12.8413c0.0719,-0.4864 -0.4399,0.2961 0,0zM19.7277,12.7737c0.6048,-0.2115 -0.664,-0.0888 0,0zM19.3216,12.6722c-0.351,-0.5752 -0.9643,-0.2876 -1.5522,-0.4103 0.4356,0.3468 1.0616,0.1903 1.5522,0.4103zM17.3761,11.2426c-0.0211,-0.4991 -0.4906,0.0042 0,0zM14.204,10.3755c0.3595,-0.5583 -0.8163,-0.4822 0,0zM14.868,13.4123c-0.0423,-0.4526 0.3933,0.1861 0,0zM13.4469,12.816c0.1227,-0.368 0.2834,0.2791 0,0zM12.9224,12.7991c-0.3003,-0.7698 0.7698,-0.1057 0,0zM14.9526,12.7779c-0.0465,-0.5075 0.3891,0.2284 0,0zM13.0112,12.2915c-0.1184,-0.6048 0.6133,-0.1142 0,0zM17.1435,10.2191c-0.6598,-0.3807 0.1269,-0.829 0,0zM15.0541,10.0753c-0.4356,-0.203 0.3933,0.0465 0,0zM15.3248,9.813c0.2199,-0.2876 -0.0423,-0.7782 0.2115,-0.1692 0.0085,0.1057 -0.0973,0.2199 -0.2115,0.1692zM16.7163,9.1701c-0.3976,0.1438 -0.3553,-0.516 -0.0381,-0.0804 0.0338,-0.0127 0.2538,0.148 0.0381,0.0846zM15.4051,8.8741c-0.0804,-0.6683 0.6936,0.1988 0,0zM15.4897,8.3031c-0.1057,-0.1692 -0.3807,-0.4229 0.0254,-0.2284 0.0381,0.055 0.1692,0.4399 -0.0296,0.2284zM15.1937,7.6771c-0.5245,-0.1057 0.4737,-0.313 0,0z"
+    android:strokeWidth="0.025377"
+    android:fillColor="#aa7027" />
+  <path
+    android:pathData="M21.2503,23.7831c-0.406,0.0254 -1.1969,-0.1946 -0.3384,-0.1015 0.7951,0.1819 2.267,-0.2326 2.6096,-0.2115 -0.719,0.2791 -1.5099,0.3341 -2.2712,0.313zM19.9899,23.745c-0.8544,-0.2326 -1.7679,-0.0846 -2.6223,-0.2876a13.0269,13.0269 45,0 1,2.7492 0.1819c0.1776,-0.0634 -0.093,0.2369 -0.1269,0.1057zM24.5916,23.4997c-0.4441,-0.093 -1.2096,-0.0423 -0.3214,-0.1903 0.7486,-0.2538 1.4972,-0.3976 2.2036,-0.3764 0.9516,0.1903 -0.7529,0.203 -0.9897,0.2791 -0.3595,-0.1057 -0.6344,0.3722 -0.8882,0.2876zM17.0631,21.6387c-0.2834,-0.5794 0.4906,0.1269 0,0zM15.4982,14.9646c0.2199,-0.3299 1.2688,-1.1335 1.0954,-0.867 -0.406,0.2369 -0.6048,0.7867 -1.0997,0.867zM16.8262,13.8395c0.1819,-0.3637 0.6683,-0.3172 0.1142,-0.0508l-0.1142,0.0508zM21.6479,13.5857c-0.8121,-0.3933 -1.7806,-0.3553 -2.635,-0.6936 -0.516,-0.1819 -1.2773,0.3891 -1.2308,-0.3045 -0.9855,-0.2961 -2.0048,-0.5075 -2.986,-0.867 -0.5245,-0.0592 -2.2332,-0.719 -1.5649,-0.8374 0.7655,0.5752 2.1232,0.7444 3.1298,1.1208 1.1843,0.3257 2.3727,0.6556 3.5824,0.8755 0.8882,-0.1227 -0.3468,-1.1969 -0.461,-1.6707 -0.5541,-0.9009 -1.1631,-1.7637 -1.7383,-2.6477 0.719,0.6344 1.087,1.5649 1.6749,2.3135 0.719,0.7106 0.7782,2.3262 2.0175,2.2332 0.4864,-0.1142 1.5988,0.4906 0.5498,0.368l-0.1946,0.0508 -0.1396,0.0592zM17.2915,13.4715c0.4864,-0.6513 0.5921,-0.2242 0,0z"
+    android:strokeWidth="0.025377"
+    android:fillColor="#663615" />
+</vector>
