@@ -1,4 +1,5 @@
 5.3.0:
+- New: another autumnal Pixel 6 wallpaper!
 - New: battery saving options for page swipe animation, tilt and zoom effects
 - New: Finnish translation
 - Improved: splash screen background color on Android 12
